cmake_minimum_required(VERSION 3.16)
project(KinectTest)

set(CMAKE_CXX_STANDARD 14)
include_directories("C:\\Program Files\\Azure Kinect SDK v1.4.1\\sdk\\include")
include_directories("C:\\Program Files\\Azure Kinect Body Tracking SDK\\sdk\\include")
include_directories("C:\\boost_1_73_0\\include\\boost-1_73")
link_directories("C:\\Program Files\\Azure Kinect Body Tracking SDK\\sdk\\windows-desktop\\amd64\\release\\lib")
link_directories("C:\\Program Files\\Azure Kinect SDK v1.4.1\\sdk\\windows-desktop\\amd64\\release\\lib")
link_directories("C:\\boost_1_73_0\\stage\\lib\\x64")
add_executable(KinectTest main.cpp udp_sender.h udp_sender.cpp custom_serializer.h)
add_executable(KinectReceive receive_main.cpp udp_receiver.cpp udp_receiver.h custom_serializer.h)
target_link_libraries(KinectTest k4a k4abt wsock32)
target_link_libraries(KinectReceive k4a k4abt wsock32)